Update and rename 2021-07-12-loginproc.md to 2021-07-12-회원가입화면.md

--- a/_posts/2021-07-12-회원가입화면.md
+++ b/_posts/2021-07-12-회원가입화면.md
@@ -1,8 +1,8 @@
 ---
-title: jsp_project-2. 회원가입화면 구현
+title: basic_project-2. 회원가입화면 구현
 date: 2021-07-12 11:33:00
-categories: [Jsp, jsp_project]
-tags: [jsp_project]
+categories: [Project, basic_project]
+tags: [basic_project]
 ---
 
 
