Update and rename 2021-07-18-회원가입화면 구현.md to 2021-07-18-회원가입 수정화면 구현.md

--- a/_posts/2021-07-18-회원가입 수정화면 구현.md
+++ b/_posts/2021-07-18-회원가입 수정화면 구현.md
@@ -1,5 +1,5 @@
 ---
-title: basic_project-3. 복습 회원가입화면 화면 구현
+title: basic_project-3. 복습 회원가입화면 수정 화면 구현
 date: 2021-07-18 11:33:00
 categories: [Project, basic_project]
 tags: [basic_project]
@@ -354,7 +354,7 @@ action 부분의 loginProc 부분으로 넘어간다.
 	HttpUtil.requestLogString(request, logger);
 	
 	String msg = "";
-
+	String redirectUrl = "";
 	String userId = HttpUtil.get(request, "userId");
 	String userPwd = HttpUtil.get(request, "userPwd");
 	String userName = HttpUtil.get(request, "userName");
@@ -387,11 +387,22 @@ action 부분의 loginProc 부분으로 넘어간다.
 				if(userDao.userInsert(user) > 0)
 				{
 					msg = "회원가입이 완료 되었습니다.";
-					
+					redirectUrl = "/";
 				}
-				
+				else
+				{
+					msg = "회원가입중 오류가 발생했습니다.";
+					redirectUrl = "/user/userRegForm.jsp";
+				}
 			}
 		}
+		else
+		{
+			//입력값이 넘어오지 않은경우
+			msg = "회원가입중 입력정보가 올바르지 않습니다.";
+			redirectUrl = "/user/userRegForm.jsp";
+		}
+
 	}
 	
 
@@ -404,6 +415,7 @@ action 부분의 loginProc 부분으로 넘어간다.
 <script>
 $(document).ready(function(){
 	alert("<%=msg%>");
+	location.href = "<%=redirectUrl%>";
 });
 </script>
 </head>
@@ -413,7 +425,14 @@ $(document).ready(function(){
 </html>
 ```
 
-이부분에서 궁금한건 
+이부분에서 궁금한건 document ready부분의 제이쿼리가
+언제 시작하는 것인가이다.
+
+모든 java부분의 소스코드를 다실행하고 그후에 최종으로
+document ready부분이 로딩되기때문에 
+msg redirectUrl을 자바단에서 가지고있는 값들을 넘겨주기때문에
+그게걸맞는 내용이나온다.
+
 
 
 
