Update and rename 2021-07-21-Spring.md to 2021-07-21-Spring환경설정.md

--- a/_posts/2021-07-21-Spring환경설정.md
+++ b/_posts/2021-07-21-Spring환경설정.md
@@ -108,9 +108,72 @@ archived 파일도 만든다.
 그다음
 pom.xml을 소스를 받아서 덮어준다.
 
+
+
+그후 선생님이줄폴더를 받고
+
+main부분에 java resources webapp 세폴더를 넣어준후
+pom.xml에서 다시 maven build를 눌러줘서 추가해준다
+
+
+그후 host파일을 연다
+hiboard.icia.co.kr 를 추가해준후
+
+
+
 C:\project\maven-3.8.1\conf\settings.xml
 
 ```
+
+
+# JSTL
+
+JSTL은 라이브러리이기 때문에 사용전 header에 추가해야 함
+
+```
+views의 taglib.jsp 파일에이 선언해줬다
+```
+
+
+
+# MyBatis 란
+
+sql을 별도의 파일로 분리해서 관리하게 해준다
+
+수동적인 파라미터 설정과 쿼리매핑 구문을 제거할수있음
+SQL 문과 프로그래밍 코드의 분리
+
+
+
+# Maven 란
+
+자바 프로젝트의 빌드를 자동화 해주는 빌드 툴
+
+maven은 update하지말고 install해야한다
+
+
+
+
+
+
+
+
+# 순서
+```
+root-context.xml
+env.xml
+servelt-context.xml
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
