Update and rename 2021-07-05-was.md to 2021-07-05-포트설정 was.md

--- a/_posts/2021-07-05-포트설정 was.md
+++ b/_posts/2021-07-05-포트설정 was.md
@@ -1,5 +1,5 @@
 ---
-title: 1. was
+title: 1. 포트설정, was
 date : 2021-07-05 12:00:00
 categories: [jsp, was]
 tags: [was]
@@ -18,26 +18,12 @@ window 64 비트.zip을 설치한다
 1. host파일들어간다
 도메인주소를 추가해준다.
 
-
-
-# CATALINA_HOME
-
-
-# 자바 1.8버전
-
   
 # 메모장 conf - server.xml
 
 cmd 에서 netstat -a 
 사용하고있는 모든 포트가 나온다.
-들어가서
-
-
-관리자권한
-host 파일 수정 
-127.0.0.1       localhost
-127.0.0.1	      test.icia.co.kr
-
+들어가서확인해봐도좋다
 
 local host를 8088으로 설정해준다
 
@@ -46,25 +32,32 @@ local host를 8088으로 설정해준다
 ```
 
 
-그다음
-
-content - utf-8
-
-java - installed jres
+# 관리자권한 host 파일 수정 
+127.0.0.1       localhost
+127.0.0.1	      test.icia.co.kr
 
 
-runtime environments 톰켓설정
-jdk설정
+# window preference 설정
 
+1. content - utf-8
+2. java - installed jres
+3. runtime environments 톰켓설정
+4. jdk설정
 
 web - utf8로 다바꾸기
 
 
-eclipse market place 의 원숭이모양 다운로드(톰켓)
-
-preference -> tomcat 9 선택
+5. eclipse market place 의 원숭이모양 다운로드(톰켓)
+    preference -> tomcat 9 선택
 		2.경로설정
 		3. server.xml설정
+
+
+
+
+
+
+================================================================
 
 file 의 new other
 
