--- a/_posts/2021-10-06-자리예약커뮤니티.md
+++ b/_posts/2021-10-06-자리예약커뮤니티.md
@@ -1,7 +1,7 @@
 ---
 title: 내자리얌 포트폴리오
 date: 2021-10-06 12:33:00
-categories: [Portfolio , 인천인보아카데미_itsmyplace]
+categories: [Portfolio , 인천인보아카데미]
 tags: [Portfolio]
 ---
 
