--- a/_posts/2021-11-20-바닐라 JS 챌린지 #5.md
+++ b/_posts/2021-11-20-바닐라 JS 챌린지 #5.md
@@ -3,7 +3,6 @@ title: 바닐라 JS 챌린지 #5
 date: 2021-11-20 12:33:00
 categories: [JAVASCRIPT, 바닐라JS]
 tags: [바닐라JS]
-
 ```
 
 변수를 정의할때 실제 let과 const의 쓰임을 적절하게 사용한다면
@@ -65,7 +64,7 @@ let키워드를 사용해 newColor함수를 사용하는것과
 
 
 
-h1.style.color의 색깔을 가져와서 담아주는 currentColor변수를 지정해준다면
+h1 style color의 색깔을 가져와서 담아주는 currentColor변수를 지정해준다면
 
 조금더 객관적인코드가 완성될수있을거라 생각이든다
 
