banila js 4 update

--- a/_posts/2021-11-19-바닐라 JS 챌린지 #4.md
+++ b/_posts/2021-11-19-바닐라 JS 챌린지 #4.md
@@ -5,7 +5,7 @@ categories: [JAVASCRIPT, 바닐라JS]
 tags: [바닐라JS]
 ```
 
-# if, else, events.
+# if   else   events
 
 
 
@@ -39,13 +39,13 @@ classList를 사용해서만든다
 
 
 
-# classList, innerWidth
+# classList    innerWidth
 
 
 
-mdn classList 링크 : https://developer.mozilla.org/ko/docs/Web/API/Element/classList
+mdn classList 링크 - https://developer.mozilla.org/ko/docs/Web/API/Element/classList
 
-코딩 : https://codesandbox.io/s/empty-blueprint-forked-l9ffv?file=/src/index.js
+코딩 - https://codesandbox.io/s/empty-blueprint-forked-l9ffv?file=/src/index.js
 
 ```javascript
 function size() {
