--- a/_posts/2021-11-18-바닐라 JS 챌린지 #3.md
+++ b/_posts/2021-11-18-바닐라 JS 챌린지 #3.md
@@ -1,7 +1,7 @@
 ```
 title: 바닐라 JS 챌린지 #3
 date: 2021-11-18 12:33:00
-categories: [JAVASCRIPT, 바닐라JS]
+categories: [FRONTEND, 바닐라JS]
 tags: [바닐라JS]
 ```
 
