--- a/_posts/2021-11-19-바닐라 JS 챌린지 #4.md
+++ b/_posts/2021-11-19-바닐라 JS 챌린지 #4.md
@@ -1,7 +1,7 @@
 ```
 title: 바닐라 JS 챌린지 #4
 date: 2021-11-19 12:33:00
-categories: [JAVASCRIPT, 바닐라JS]
+categories: [FRONTEND, 바닐라JS]
 tags: [바닐라JS]
 ```
 
