chunk 프로세스이해

--- a/_posts/2022-01-29-스프링 배치 Chunk 프로세스이해.md
+++ b/_posts/2022-01-29-스프링 배치 Chunk 프로세스이해.md
@@ -14,7 +14,7 @@ tags: [SPRING]
 - 일반적으로 청크 단위로 쪼개어 더이상 처리할 데이터가 없을때까지 반복해서 입출력하는데 사용된다.
 
 
-![여러개가 모인 하나의 chunk 단위  (chunk1.jpg)]({{ "/assets/img/springbatch/chunk1.png" | relative_url}})
+![여러개가 모인 하나의 chunk 단위]({{ "/assets/img/springbatch/chunk1.png" | relative_url}})
 
 
 입력기가 item들을 읽어서 원안에 저장한다. 이원들이 청크가된다
@@ -25,6 +25,11 @@ tags: [SPRING]
 <br>
 <br>
 
+![chunk<I> 와  chunk<O>의 흐름도]({{ "/assets/img/springbatch/chunk2.png" | relative_url}})
+Source로 부터 한건씩얻고  Cunck<I> 크기만큼의 item들을 가지고있다.
+
+chunck를 전달받은 ItemProcessor은 가공되고 변형한다음 Chunk<O> 에 담아놓는다. 그후 items들을 ItemWriter에 전달하게 된다.
+
 
 - Cunck < I >   차이점  Cunck< O >
   - Cunck<I> 는  ItemReader로 읽은 하나의 아이템을 chunk에서 정한 개수만큼 반복해서 저장하는 타입
@@ -33,16 +38,11 @@ tags: [SPRING]
     <br>
     <br>
 
-![chunk<I> 와  chunk<O>의 흐름도 (chunk2.jpg)]({{ "/assets/img/springbatch/chunk2.png" | relative_url}})
 
-
-Source로 부터 한건씩얻고  Cunck<I> 크기만큼의 item들을 가지고있다.
-
-chunck를 전달받은 ItemProcessor은 가공되고 변형한다음 Chunk<O> 에 담아놓는다. 그후 items들을 ItemWriter에 전달하게 된다.
 
 ## Chunk 아키텍처
 
-![chunk를 사용해 item들을 어떻게 받고, 가공하여 DB까지 처리되는 아키텍쳐 (chunk3.jpg)]({{ "/assets/img/springbatch/chunk3.png" | relative_url}})
+![chunk를 사용해 item들을 어떻게 받고, 가공하여 DB까지 처리되는 아키텍쳐]({{ "/assets/img/springbatch/chunk3.png" | relative_url}})
 
 chunk를 사용해 item들을 어떻게 받고, 가공하여 DB까지 처리되는 아키텍쳐 (chunk3.jpg)
 
