chunk 프로세스이해

--- a/_posts/2022-01-29-스프링 배치 Chunk 프로세스이해.md
+++ b/_posts/2022-01-29-스프링 배치 Chunk 프로세스이해.md
@@ -9,7 +9,7 @@ tags: [SPRING]
 
 ## 기본개념
 
-- Cunck란 여러개의 아이템을 묶은 하나의 덩어리를 의미한다.
+- Cunck란 여러개의 아이템을 묶은 하나의 덩어리를 의미한다.수정
 - 한번에 하나씩 아이템을 입력받아 Chunk 단위의 덩어리로만들어 Cunck 단위로 트랙잭션을 처리한다, Cunck 단위의 Commit과 Rollback이 이루어짐
 - 일반적으로 청크 단위로 쪼개어 더이상 처리할 데이터가 없을때까지 반복해서 입출력하는데 사용된다.
 
